<resources>
    <string name="app_name">SnowBlossom</string>
    <string name="title_activity_bottom_navigation" translatable="false">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_server_settings">Server</string>
    <string name="title_wallet_settings">Wallet</string>
    <string name="title_language_settings">Language</string>
    <string name="title_about_settings">About</string>


    <!--send screen -->
    <string name="title_balance">Balance</string>
    <string name="title_address">Address</string>
    <string name="title_amount">Amount</string>
    <string name="title_address_hint">SNOW Address</string>
    <string name="title_amount_hint">SNOW Amount</string>
    <string name="title_send">Send</string>
    <string name="title_send_now">Send Snow</string>
    <string name="title_need_permissions">Need Permissions</string>
    <string name="title_permissions_description">Snowblossom needs permission to open camera in order to read QR codes. You can grant them in app settings.</string>
    <string name="title_goto_settings">GOTO SETTINGS</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_sending_flakes">Sending Snow Flakes</string>
    <string name="title_failed">Failed</string>
    <string name="title_failed_description_send">Could not complete transaction</string>

    <!--Home Screen-->
    <string name="title_connecting_home">Connecting...</string>
    <string name="title_connected_home">Connected</string>
    <string name="title_camera">Camera</string>
    <string name="title_receive">Receive</string>
    <string name="title_settings">Settings</string>
    <string name="title_loading_dialog">Please Wait</string>
    <string name="title_calculating_spendable">Calculating Spendable</string>
    <string name="title_connecting_node">Connecting to node…</string>
    <string name="title_creating_wallet">Creating Wallet</string>


    <!--Receive Screen-->
    <string name="title_copy">Tap to Copy Address</string>
    <string name="title_generate_address">Generate new address</string>
    <string name="title_receive_snow">Receive Snow</string>
    <string name="title_address_copied">Address Copied</string>
    <string name="title_retrieving_address">Retrieving Address</string>

    <!--Wallet Screen-->
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>


    <string name="title_loading_splash">Loading ...</string>


    <string name="title_seconds_ago">Seconds Ago</string>
    <string name="title_minutes_ago">Minutes Ago</string>
    <string name="title_hours_ago">Hours Ago</string>
    <string name="title_months_ago">Months Ago</string>
    <string name="title_years_ago">Years Ago</string>
    <string name="title_week_ago">Week Ago</string>
    <string name="title_days_ago">Days Ago</string>
    <string name="title_refreshed_now">Refreshed 0 seconds ago</string>


    <string name="title_opensource_main">Snowblossom is an open source cryptocurrency</string>
    <string name="title_create_main">Create Wallet</string>
    <string name="title_import_main">Import Wallet From Seed</string>
    <string name="title_import_file">Import From File</string>
    <string name="title_continue">Continue</string>

    <string name="title_connect_server">Connect</string>

    <string name="title_connect_server_hint">Enter Server URL</string>
    <string name="title_connect_port_hint">Port</string>


    <string name="title_copy_hash">Tap to Copy Hash</string>
    <string name="title_hash_copied">Hash Copied</string>


    <string name="title_confirm_snow_head">Confirmation</string>
    <string name="title_confirm_snow_content">Do you confirm this transaction?</string>

    <string name="title_confirm_snow_negative">Cancel</string>
    <string name="title_confirm_snow_positive">Confirm</string>

    <string name="title_next">Next</string>
    <string name="title_seed">Seed</string>


</resources>
