<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.enginious.snowblossom.ServersActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_servers_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:foregroundTint="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/AppTheme.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
            android:layout_width="30dp"
            android:contentDescription=""
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/leafless_tree"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"

        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_server_settings"
                android:paddingLeft="5dp"
                android:fontFamily="@font/pt_sans"
                android:textColor="@color/colorPrimaryDark"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_sans"
                android:hint="@string/title_connect_server_hint"
                android:inputType="textUri"
                android:text=""
                android:textSize="18sp"
                android:id="@+id/et_url_server_setting"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/colorPrimaryDark"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_sans"
                android:paddingLeft="5dp"
                android:text="Port"

                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_sans"
                android:hint="@string/title_connect_port_hint"
                android:textSize="18sp"
                android:text=""
                android:inputType="number"
                android:id="@+id/et_port_server_setting"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/colorPrimaryDark"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1">
        <Button
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:background="@drawable/snowbutton_purple"
            android:fontFamily="@font/pt_sans"
            android:text="@string/title_connect_server"
            android:id="@+id/btn_connect_server_setting"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />
    </LinearLayout>



</LinearLayout>
